[package]
name = "sd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
anyhow = "1.0.66"
ignore = "0.4.18"
atty = "0.2.14"
regex = "1.7.0"
similar = "2.2.1"
